<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layoutBackground"
    android:descendantFocusability="beforeDescendants"
    android:fillViewport="true"
    android:focusableInTouchMode="true"
    android:foregroundGravity="fill_vertical"
    android:visibility="gone"
    tools:visibility="visible">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp">

        <ImageView
            android:id="@+id/moviePoster"
            android:layout_width="90dp"
            android:layout_height="140dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/cardBackground"
            android:contentDescription="@string/movie_poster"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@null" />

        <TextView
            android:id="@+id/tvMovieTitle"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:includeFontPadding="false"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/moviePoster"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Avengers: Infinity War" />

        <TextView
            android:id="@+id/tvMovieYearAndRuntime"
            style="@style/AppTheme.TextViewDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/moviePoster"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle"
            tools:text="2018, 147 minutos" />

        <TextView
            android:id="@+id/tvVoteAverage"
            style="@style/AppTheme.TextViewDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_star_14dp"
            android:drawableRight="@drawable/ic_star_14dp"
            android:drawablePadding="@dimen/dimen_6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/moviePoster"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieYearAndRuntime"
            tools:text="4,6" />

        <HorizontalScrollView
            android:id="@+id/horizontalContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/moviePoster"
            app:layout_constraintTop_toBottomOf="@+id/tvVoteAverage">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipChildren="false">

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

        <TextView
            android:id="@+id/tvSynopsis"
            style="@style/AppTheme.TextViewDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:layout_marginBottom="16dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/tvReviewsTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moviePoster"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in ante at diam mollis scelerisque et eget ligula. Nunc at tristique nisi. Pellentesque quis ex posuere, commodo mi vitae, mollis justo. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque molestie pulvinar libero, eu lobortis dui congue eget. Vestibulum ac lacus id turpis mollis efficitur ut id lorem. Nunc efficitur massa vitae est tempus viverra. Mauris malesuada at leo non vehicula. Mauris nec pellentesque dui. Morbi nunc neque, consequat ut enim id, tincidunt tincidunt quam. Integer laoreet luctus ante a dignissim. Etiam efficitur lacus a nunc facilisis, ac fermentum tellus facilisis. Ut orci diam, tempor non lorem blandit, ullamcorper lacinia eros." />

        <TextView
            android:id="@+id/tvReviewsTitle"
            style="@style/AppTheme.TextViewSectionTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/title_reviews"
            app:layout_constraintBottom_toTopOf="@+id/reviewsContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSynopsis"
            app:layout_goneMarginBottom="8dp" />

        <LinearLayout
            android:id="@+id/reviewsContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:clipChildren="false"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/tvSimilarMoviesTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvReviewsTitle" />

        <TextView
            android:id="@+id/tvSimilarMoviesTitle"
            style="@style/AppTheme.TextViewSectionTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/title_similar_movies"
            app:layout_constraintBottom_toTopOf="@+id/recyclerViewSimilarMovies"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reviewsContainer" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewSimilarMovies"
            style="@style/AppTheme.MyRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false"
            android:paddingLeft="@dimen/dimen_16dp"
            android:paddingRight="@dimen/dimen_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSimilarMoviesTitle"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/tvTrailersTitle"
            style="@style/AppTheme.TextViewSectionTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/title_trailers"
            app:layout_constraintBottom_toTopOf="@+id/recyclerViewTrailers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewSimilarMovies"
            app:layout_goneMarginBottom="8dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewTrailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="true"
            android:paddingLeft="@dimen/dimen_16dp"
            android:paddingRight="@dimen/dimen_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTrailersTitle"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/tvHomepage"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:paddingBottom="@dimen/dimen_16dp"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewTrailers"
            tools:text="Saiba mais em wwww.movies.com" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
